Expose hearingSummary.hearingDay.hasSharedResults flag
