# app/serializers/api/internal/v1/hearing_summary_serializer.rb
@@ -9,14 +9,11 @@ module Api
         attributes :hearing_type, :estimated_duration
 
         attribute :hearing_days do |hearing_summary|
-          hearing_summary.sitting_days.map do |day|
-            Date.parse(day).to_formatted_s(:db)
-          end
-        end
-
-        attribute :sitting_days do |hearing_summary|
-          hearing_summary.sitting_days.map do |day|
-            Date.parse(day).to_formatted_s(:db)
+          hearing_summary.hearing_days.map do |hearing_day|
+            {
+              sitting_day: Date.parse(hearing_day.sitting_day).to_formatted_s(:db),
+              has_shared_results: hearing_day.has_shared_results,
+            }
           end
         end
 
